--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/open">
+    android:id="@+id/res">
 
     <GridLayout
         android:layout_width="fill_parent"
@@ -104,8 +103,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_gallery"
-        android:id="@+id/gallery_button"
-        android:visibility="visible"
+        android:id="@+id/button2"
+        android:visibility="gone"
         android:onClick="run"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -116,9 +115,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_camera"
-        android:id="@+id/camera_button"
+        android:id="@+id/button3"
         android:layout_gravity="center_horizontal"
-        android:visibility="visible"
+        android:visibility="gone"
         android:onClick="dispatchTakePictureIntent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
@@ -128,19 +127,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:text="@string/none"
+        android:text="Loading..."
         android:id="@+id/loading_text" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Leaf Classifier"
-        android:id="@+id/banner"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp" />
-
 </RelativeLayout>
