--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -129,4 +129,16 @@
         android:layout_height="wrap_content"
         android:text="Loading..."
         android:id="@+id/loading_text" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="#ff5bffd5"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
