--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
         android:text="@string/button_gallery"
         android:id="@+id/gallery_button"
         android:visibility="visible"
-        android:onClick="run"
+        android:onClick="dispatchGalleryIntent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="75dp"
@@ -119,7 +119,7 @@
         android:id="@+id/camera_button"
         android:layout_gravity="center_horizontal"
         android:visibility="visible"
-        android:onClick="dispatchTakePictureIntent"
+        android:onClick="dispatchCameraIntent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="75dp"
